kubernetes/wes-plugin-network-policy.yaml
# The wes-plugin-network-policy-default-deny network policy ensures that
# pods are "isolated" by default and require adding network permissions.
#
# See these examples:
# https://kubernetes.io/docs/concepts/services-networking/network-policies/#default-deny-all-ingress-traffic
# https://kubernetes.io/docs/concepts/services-networking/network-policies/#default-deny-all-egress-traffic
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wes-plugin-network-policy-dns
spec:
  podSelector:
    matchLabels:
      role: plugin
  policyTypes:
    - Egress
  egress:
    - ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wes-plugin-network-policy-rabbitmq
spec:
  podSelector:
    matchLabels:
      role: plugin
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: wes-rabbitmq
      ports:
        - protocol: TCP
          port: 5672
        - protocol: TCP
          port: 1883
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wes-plugin-network-policy-audio-server
spec:
  podSelector:
    matchLabels:
      role: plugin
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: wes-audio-server
      ports:
        - protocol: TCP
          port: 4713
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wes-plugin-network-policy-playback-server
spec:
  podSelector:
    matchLabels:
      role: plugin
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: wes-playback-server
      ports:
        - protocol: TCP
          port: 8090
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wes-plugin-network-policy-gps-server
spec:
  podSelector:
    matchLabels:
      role: plugin
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: wes-gps-server
      ports:
        - protocol: TCP
          port: 2947
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wes-plugin-network-policy-ip-devices
spec:
  podSelector:
    matchLabels:
      role: plugin
  policyTypes:
    - Egress
  egress:
    - to:
        # allow devices on lan
        - ipBlock:
            cidr: 10.31.81.0/24
        # allow devices on vpn
        - ipBlock:
            cidr: 10.107.0.0/16
---
# TODO(sean) this is a temporary fix. we should see if we can exclude the init containers from being matched here.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wes-plugin-network-policy-app-meta-cache
spec:
  podSelector:
    matchLabels:
      role: plugin
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: wes-app-meta-cache
      ports:
        - protocol: TCP
          port: 6379
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wes-plugin-network-policy-scorebaord
spec:
  podSelector:
    matchLabels:
      role: plugin
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: wes-scoreboard
      ports:
        - protocol: TCP
          port: 6379
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wes-plugin-network-policy-jetson-exporter
spec:
  podSelector:
    matchLabels:
      role: plugin
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: wes-jetson-exporter
      ports:
        - protocol: TCP
          port: 9101
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wes-plugin-network-policy-ollama
spec:
  podSelector:
    matchLabels:
      role: plugin
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: ollama
      ports:
        - protocol: TCP
          port: 11434
